--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -3,4 +3,20 @@
 
 .header{
     display:flex;
+
+}
+.header p{
+    color:#5c5c5c;
+    font-size:24px;
+
+}
+
+.header span{
+    color: #7c787c;
+    font-size: 14px;
+}
+
+.header img{
+    width:80px;
+    height:80px;
 }
