--- a/Project-I-Social-Card/social-card/src/App.css
+++ b/Project-I-Social-Card/social-card/src/App.css
@@ -2,3 +2,12 @@
   Write your styles/CSS for App.js here and import into the component that you need 
   IF you'd like to attempt to use less you'll have to research how to do this with Create React App
 */
+
+
+#root{
+  width:600px;
+  margin: 0 auto;
+  -webkit-box-shadow: -1px 3px 35px -15px rgba(82,82,82,1);
+  -moz-box-shadow: -1px 3px 35px -15px rgba(82,82,82,1);
+  box-shadow: -1px 3px 35px -15px rgba(82,82,82,1);
+}
