--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,17 @@
 /* All styles for your Card Components live here */
+.banner img{
+    max-width:800px;
+    width:90%;
+}
+
+.banner, .card-content{
+    margin-left:10%;
+}
+
+.card-content p{
+    color:#5c5c5c;
+    font-size:16px;
+}
+.card-content{
+   padding-bottom:50px;
+}
