--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -3,20 +3,25 @@
 
 .header{
     display:flex;
+    
 
 }
 .header p{
     color:#5c5c5c;
-    font-size:24px;
+    font-size:16px;
 
+}
+
+.header div{
+    padding-left:10px;
 }
 
 .header span{
     color: #7c787c;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .header img{
-    width:80px;
-    height:80px;
+    width:50px;
+    height:50px;
 }
