--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,8 @@
 /* All styles for your Card Components live here */
+
+
+.cardBanner{
+    width:100%;
+    max-width:600px;
+    margin-left:90px;
+}
