--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,31 @@
 /* All styles for your header Components live here */
+
+.headerContainer{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.logo {
+    width:80px;
+    height:80px;
+    padding:10px;
+}
+
+.title{
+    margin:0;
+    display:inline-block;
+    font-size:1.5em;
+}
+
+.timeStamp{
+    color:lightgray;
+}
+.headerTitle{
+    width:80%;
+    padding-top:10px;
+}
+
+.postInfo{
+    width:80%;
+    margin-left:90px;
+}
