--- a/Project-I-Social-Card/social-card/src/App.css
+++ b/Project-I-Social-Card/social-card/src/App.css
@@ -7,7 +7,9 @@
 .outerContainer{
    width:800px;
    margin:0 auto;
-   border:1px solid black;
    display:flex;
    flex-direction: column;
+   -webkit-box-shadow: 3px 21px 26px 8px rgba(207,201,207,1);
+   -moz-box-shadow: 3px 21px 26px 8px rgba(207,201,207,1);
+   box-shadow: 3px 21px 26px 8px rgba(207,201,207,1);
 }
